--- a/beta/index.html
+++ b/beta/index.html
@@ -172,7 +172,7 @@ function alertAds() {
       
       <button onclick="searchFiles()" class="btn btn-primary">Search your Tiles</button><br><br>
       <button onclick="addFile()" class="btn btn-primary">Add a document</button>
-      <button onclick="resetTiles()" class="btn btn-danger"Reset your Tiles</button>
+      <button onclick="resetTiles()" class="btn btn-danger">Reset your Tiles</button><br>
         <div id="tiles-tiles">
        You have no Tiles.
        </div>
