--- a/beta/index.html
+++ b/beta/index.html
@@ -167,7 +167,7 @@ function alertAds() {
   
     <div id="tiles" style="display: none;">
        <h3>Tiles</h3><br>
-       File<br>
+       File name<br>
       <input class="form-control" type="text" id="TiFilesSearch"><br>
       
       <button onclick="searchFiles()" class="btn btn-primary">Search your Tiles</button><br><br>
