--- a/beta/index.html
+++ b/beta/index.html
@@ -33,6 +33,7 @@
                 <li class="dropdown-header">TiWork</li>
                      <li><a href="?app=3">TiDocs <span class="glyphicon glyphicon-pencil"></span></a></li>
                      <li><a href="?app=4">TiContacts <span class="glyphicon glyphicon-book"></span></a></li>
+                     <li><a href="?app=6">Tiles <span class="glyphicon glyphicon-floppy-disk"></span></a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="?app=7">New App <span class="glyphicon glyphicon-plus"></span></a></li>
               </ul>
