--- a/beta/index.html
+++ b/beta/index.html
@@ -171,9 +171,9 @@ function alertAds() {
        File name<br>
       <input class="form-control" type="text" id="TiFilesSearch"><br>
       
-      <button onclick="searchFiles()" class="btn btn-primary">Search your Tiles</button><br><br>
+      <button onclick="searchFiles()" class="btn btn-primary">Search your Tiles</button>
       <button onclick="addFile()" class="btn btn-primary">Add a document</button>
-      <button onclick="resetTiles()" class="btn btn-danger">Reset your Tiles</button><br>
+      <button onclick="resetTiles()" class="btn btn-danger">Reset your Tiles</button><br><br>
         <div id="tiles-tiles">
        You have no Tiles.
        </div>
