--- a/beta/index.html
+++ b/beta/index.html
@@ -169,10 +169,10 @@ function alertAds() {
     <div id="tiles" style="display: none;">
        <h3>Tiles</h3><br>
        File name<br>
-      <input class="form-control" type="text" id="TiFilesSearch"><br>
+      <input class="form-control" type="text" id="TiFilesSearch" list="TilesList"><br>
       
       <button onclick="searchFiles()" class="btn btn-primary">Search your Tiles</button>
-      <button onclick="addFile()" class="btn btn-primary">Add a document</button>
+      <button onclick="addFile()" class="btn btn-primary">Add a Document</button>
       <button onclick="resetTiles()" class="btn btn-danger">Reset your Tiles</button><br><br>
         <div id="tiles-tiles">
        You have no Tiles.
