--- a/beta/index.html
+++ b/beta/index.html
@@ -170,9 +170,7 @@ function alertAds() {
        <h3>Tiles</h3><br>
        File name<br>
       <input class="form-control" type="text" id="TiFilesSearch" list="TilesList"><br>
-      <datalist id="TilesList">
-        
-      </datalist>
+      <div id="tiles-listdiv"></div>
       <button onclick="searchFiles()" class="btn btn-primary">Search your Tiles</button>
       <button onclick="addFile()" class="btn btn-primary">Add a Document</button>
       <button onclick="resetTiles()" class="btn btn-danger">Reset your Tiles</button><br><br>
