--- a/beta/index.html
+++ b/beta/index.html
@@ -174,7 +174,7 @@ function alertAds() {
        File name<br>
       <input class="form-control" type="text" id="TiFilesSearch"><br>
       <button onclick="searchFiles()" class="btn btn-primary">Search your Tiles</button>
-      <button onclick="addFile()" class="btn btn-primary">Add a Document</button>
+      <button onclick="addFile()" class="btn btn-primary">Add a Tile</button>
       <button onclick="resetTiles()" class="btn btn-danger">Reset your Tiles</button><br><br>
         <div id="tiles-tiles">
        You have no Tiles.
