--- a/beta/index.html
+++ b/beta/index.html
@@ -171,7 +171,7 @@ function alertAds() {
        File name<br>
       <input class="form-control" type="text" id="TiFilesSearch"><button onclick="searchFiles()" class="btn btn-primary">Search</button><br>
       <button onclick="addFile()" class="btn btn-primary">Add a Tile</button>
-      <button onclick="save()" class="btn btn-primary">Save your changes</button><br><br>
+      <!--<button onclick="save()" class="btn btn-primary">Save your changes</button><br><br>/*-->
         <div id="tiles-tiles">
        You have no Tiles.
        </div>
