--- a/beta/index.html
+++ b/beta/index.html
@@ -169,7 +169,7 @@ function alertAds() {
     <div id="tiles" style="display: none;">
        <h3>Tiles</h3><br>
        File name<br>
-      <input class="form-control" type="text" id="TiFilesSearch"><button onclick="searchFiles()" class="btn btn-primary">Search</button><br>
+      <input class="form-control" type="text" id="TiFilesSearch"><br><button onclick="searchFiles()" class="btn btn-primary">Search</button>
       <button onclick="addFile()" class="btn btn-primary">Add a Tile</button>
       <!--<button onclick="save()" class="btn btn-primary">Save your changes</button><br><br>/*-->
         <div id="tiles-tiles">
