--- a/beta/index.html
+++ b/beta/index.html
@@ -171,6 +171,13 @@ function alertAds() {
        File name<br>
       <input class="form-control" type="text" id="TiFilesSearch"><br><button onclick="searchFiles()" class="btn btn-primary">Search</button>
       <button onclick="addFile()" class="btn btn-primary">Add a Tile</button>
+      <li class="dropdown">
+              <a data-toggle="dropdown" href="#">Add a Tile<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="index.html?app=3">New TiDoc<span class="glyphicon glyphicon-home"></span></a></li>
+                <li><a href="?app=5">New Bookmark<span class="glyphicon glyphicon-cog"></span></a></li>
+              </ul>
+            </li>
       <button onclick="save()" class="btn btn-primary">Save your changes</button><br><br>
         <div id="tiles-tiles">
        You have no Tiles.
