--- a/beta/index.html
+++ b/beta/index.html
@@ -174,8 +174,8 @@ function alertAds() {
       <li class="dropdown">
               <a data-toggle="dropdown" href="#">Add a Tile<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="index.html?app=3">New TiDoc<span class="glyphicon glyphicon-home"></span></a></li>
-                <li><a href="?app=5">New Bookmark<span class="glyphicon glyphicon-cog"></span></a></li>
+                <li><a href="index.html?app=3">New TiDoc<span class="glyphicon glyphicon-pencil"></span></a></li>
+                <li><button onclick="addFile()" class="btn btn-primary">New Bookmark<span class="glyphicon glyphicon-bookmark"></span></button></li>
               </ul>
             </li>
       <button onclick="save()" class="btn btn-primary">Save your changes</button><br><br>
