--- a/beta/index.html
+++ b/beta/index.html
@@ -170,12 +170,11 @@ function alertAds() {
        <h3>Tiles</h3><br>
        File name<br>
       <input class="form-control" type="text" id="TiFilesSearch"><br><button onclick="searchFiles()" class="btn btn-primary">Search</button>
-      <button onclick="addFile()" class="btn btn-primary">Add a Tile</button>
       <li class="dropdown">
               <a data-toggle="dropdown" href="#">Add a Tile<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="index.html?app=3">New TiDoc<span class="glyphicon glyphicon-pencil"></span></a></li>
-                <li><button onclick="addFile()" class="btn btn-primary">New Bookmark<span class="glyphicon glyphicon-bookmark"></span></button></li>
+                <li><a href="index.html?app=3">New TiDoc <span class="glyphicon glyphicon-pencil"></span></a></li>
+                <li><button onclick="addFile()" class="button">New Bookmark <span class="glyphicon glyphicon-bookmark"></span></button></li>
               </ul>
             </li>
       <button onclick="save()" class="btn btn-primary">Save your changes</button><br><br>
