--- a/beta/index.html
+++ b/beta/index.html
@@ -174,7 +174,7 @@ function alertAds() {
               <a data-toggle="dropdown" href="#">Add a Tile<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="index.html?app=3">New TiDoc <span class="glyphicon glyphicon-pencil"></span></a></li>
-                <li><button onclick="addFile()" class="button">New Bookmark <span class="glyphicon glyphicon-bookmark"></span></button></li>
+                <li><a onclick="addFile()">New Bookmark <span class="glyphicon glyphicon-bookmark"></span></a></li>
               </ul>
             </li>
       <button onclick="save()" class="btn btn-primary">Save your changes</button><br><br>
