--- a/beta/index.html
+++ b/beta/index.html
@@ -172,7 +172,7 @@ function alertAds() {
       <input class="form-control" type="text" id="TiFilesSearch"><br><button onclick="searchFiles()" class="btn btn-primary">Search</button>
       <ul class="btn btn-primary">
         <li class="dropdown">
-              <a data-toggle="dropdown" href="#">Add a Tile<span class="caret"></span></a>
+              <a data-toggle="dropdown" href="#" style="color:white">Add a Tile<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="index.html?app=3">New TiDoc <span class="glyphicon glyphicon-pencil"></span></a></li>
                 <li><a onclick="addFile()">New Bookmark <span class="glyphicon glyphicon-bookmark"></span></a></li>
