--- a/beta/index.html
+++ b/beta/index.html
@@ -88,6 +88,9 @@ setInterval(changeName, 50)
     padding: 2px 16px;
 }
 </style>
+    <script>
+      document.getElementById("recentUrl").innerHTML = localStorage.url;
+    </script>
    <div class="recentDocs">
 <div class="card">
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlSdRzv4BTZM3iLNQUfRdIbPM7kXgaT50QSDRm83AO_LI0nawadw" alt="Avatar" style="width:100%">
@@ -98,15 +101,6 @@ setInterval(changeName, 50)
   </div>
  </div>
 <script>
-function checkRecent() {
-if(document.getElementById("recentUrl").innerHTML == undefined {
-document.getElementByClassName("recentDocs").style = "display:block"
-}
-else {
-document.getElementByClassName("recentDocs").style = "display:none" 
-}
-}
-document.getElementById("recentUrl").innerHTML = localStorage.url;
 function redirect() {
 window.location.href = localStorage.url
 }
