--- a/beta/index.html
+++ b/beta/index.html
@@ -88,11 +88,11 @@ setInterval(changeName, 50)
     padding: 2px 16px;
 }
 </style>
-   <div class="recentDocs">
+    <h2> Last Opened Document </h2>
+    <div class="recentDocs">
 <div class="card">
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlSdRzv4BTZM3iLNQUfRdIbPM7kXgaT50QSDRm83AO_LI0nawadw" alt="Avatar" style="width:20%">
   <div class="container">
-    <p id="recentUrl"></p>
   </div>
   <button class="btn btn-primary" onclick="redirect()">Open Doc Url <button>
   </div>
