--- a/beta/index.html
+++ b/beta/index.html
@@ -73,28 +73,13 @@ NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
 setInterval(changeName, 50)
   </script>
   <center>
-    <style>
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 20%;
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.container {
-    padding: 2px 16px;
-}
-</style>
     <h4> Last Opened Document </h4>
     <div class="recentDocs">
 <div class="card">
-  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlSdRzv4BTZM3iLNQUfRdIbPM7kXgaT50QSDRm83AO_LI0nawadw" alt="Avatar" style="width:20%">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlSdRzv4BTZM3iLNQUfRdIbPM7kXgaT50QSDRm83AO_LI0nawadw" alt="Avatar" style="width:30%">
   <div class="container">
   </div>
-  <button class="btn btn-primary" onclick="redirect()">Open Doc Url <button>
+  <button class="btn btn-primary" onclick="redirect()">Open This Document<button>
   </div>
  </div>
     </center>
