--- a/beta/index.html
+++ b/beta/index.html
@@ -79,7 +79,7 @@ setInterval(changeName, 50)
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlSdRzv4BTZM3iLNQUfRdIbPM7kXgaT50QSDRm83AO_LI0nawadw" alt="Avatar" style="width:10%">
   <div class="container">
   </div>
-  <button class="btn btn-primary" onclick="redirect()">Open This Document<button>
+  <button style="height:45px;width:150px" class="btn btn-primary" onclick="redirect()">Open This Document<button>
   </div>
  </div>
     </center>
