--- a/beta/index.html
+++ b/beta/index.html
@@ -75,7 +75,7 @@ setInterval(changeName, 50)
   <center>
     <h4> Last Opened Document </h4>
   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlSdRzv4BTZM3iLNQUfRdIbPM7kXgaT50QSDRm83AO_LI0nawadw" alt="Avatar" style="width:10%">
-  <button style="height:45px;width:175px" class="btn btn-primary" onclick="redirect()">Open This Document<button>
+  <button style="height:45px;width:175px" class="btn btn-primary" onclick="redirect()">Open This Document</button>
     </center>
   <center>
    <div id="HCB_comment_box">Loading comments...</div>
