--- a/beta/index.html
+++ b/beta/index.html
@@ -163,6 +163,10 @@ function alertAds() {
        Bar Color<br>
       <input style="width: 5%;" id="barColor" class="jscolor form-control" value="2296f3"><br>
       <button onclick="updateSettings()" class="btn btn-success">Save</button>
+       
+       <h4> Other Settings </h4>
+       Reset All Tiles<br>
+       <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button>
   </div>
   
     <div id="tiles" style="display: none;">
