--- a/beta/index.html
+++ b/beta/index.html
@@ -29,12 +29,12 @@
                 <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a></li>
                 <li><a href="?app=1">Points <span class="glyphicon glyphicon-usd"></span></a></li>
                 <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
-                <li><a href="?app=5">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
+                <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
                 <li class="dropdown-header">TiWork</li>
-                     <li><a href="?app=4">TiContacts <span class="glyphicon glyphicon-book"></span></a></li>
-                     <li><a href="?app=6">Tiles <span class="glyphicon glyphicon-floppy-disk"></span></a></li>
+                     <li><a href="?app=5">TiContacts <span class="glyphicon glyphicon-book"></span></a></li>
+                     <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-floppy-disk"></span></a></li>
                 <li role="separator" class="divider"></li>
-                <li><a href="?app=7">New App <span class="glyphicon glyphicon-plus"></span></a></li>
+                <li><a href="?app=8">New App <span class="glyphicon glyphicon-plus"></span></a></li>
               </ul>
             </li>
           </ul>
@@ -176,9 +176,10 @@ function alertAds() {
       <ul class="btn btn-primary">
         <li class="dropdown">
               <a data-toggle="dropdown" href="#" style="color:white">Add a Tile <span class="caret"></span></a>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu" style="list-style: none;">
                 <li><a href="index.html?app=3">New TiDoc <span class="glyphicon glyphicon-pencil"></span></a></li>
-                <li><a onclick="addFile()">Save TiDoc<span class="glyphicon glyphicon-floppy-saved"></span></a></li>
+                <li><a href="index.html?app=4">New TiSheet <span class="glyphicon glyphicon-th-list"></span></a></li>
+                <li><a onclick="addFile()">Save TiDoc <span class="glyphicon glyphicon-floppy-saved"></span></a></li>
                 <li><a onclick="redirect()">Last Opened Document <span class="glyphicon glyphicon-folder-open"></span></a></li>
                 <li><a onclick="addFile()">New Bookmark <span class="glyphicon glyphicon-bookmark"></span></a></li>
               </ul>
