--- a/beta/index.html
+++ b/beta/index.html
@@ -173,7 +173,7 @@ function alertAds() {
        <h3>Tiles</h3><br>
        File name<br>
       <input class="form-control" type="text" id="TiFilesSearch"><br><button onclick="searchFiles()" class="btn btn-primary">Search</button>
-      <ul class="btn btn-primary">
+      <ul class="btn btn-primary" style="list-style: none;">
         <li class="dropdown">
               <a data-toggle="dropdown" href="#" style="color:white">Add a Tile <span class="caret"></span></a>
               <ul class="dropdown-menu" style="list-style: none;">
