--- a/beta/index.html
+++ b/beta/index.html
@@ -192,7 +192,28 @@ function alertAds() {
   </div>
  <div id="tisheets" style="display: none;">
   <h3>TiSheets</h3>
-  <p>App is still being worked on.</p>
+<table style="width: 100%" contenteditable="true" class="table">
+  <tr>
+    <th></th>
+    <th></th> 
+    <th></th>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
 </div>
   <div id="HCB_comment_box" style="display: none;">Connecting to <b>Tiles</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
