--- a/beta/index.html
+++ b/beta/index.html
@@ -192,6 +192,12 @@ function alertAds() {
   </div>
  <div id="tisheets" style="display: none;">
   <h3>TiSheets</h3>
+   <style>
+     table, th, td {
+        border: 1px solid gray;
+        border-collapse: collapse;
+     }
+   </style>
 <table style="width: 100%" contenteditable="true" class="table">
   <tr>
     <th></th>
