--- a/beta/index.html
+++ b/beta/index.html
@@ -198,23 +198,23 @@ function alertAds() {
         border-collapse: collapse;
      }
    </style>
-<table style="width: 100%; padding: 20px;" contenteditable="true" id="tisheets-table">
-  <tr>
+<table style="width: 100%;" contenteditable="true" id="tisheets-table">
+  <tr style="padding: 20px;">
     <th> </th>
     <th> </th> 
     <th> </th>
   </tr>
-  <tr>
+  <tr style="padding: 20px;">
     <td> </td>
     <td> </td>
     <td> </td>
   </tr>
-  <tr>
+  <tr style="padding: 20px;">
     <td> </td>
     <td> </td>
     <td> </td>
   </tr>
-  <tr>
+  <tr style="padding: 20px;">
     <td> </td>
     <td> </td>
     <td> </td>
