--- a/beta/index.html
+++ b/beta/index.html
@@ -199,25 +199,25 @@ function alertAds() {
      }
    </style>
 <table style="width: 100%;" contenteditable="true" id="tisheets-table">
-  <tr style="padding: 20px;">
-    <th> </th>
-    <th> </th> 
-    <th> </th>
+  <tr>
+    <th>Name</th>
+    <th>Name</th> 
+    <th>Name</th>
+  </tr>
+  <tr>
+    <td>Name</td>
+    <td>Value</td>
+    <td>Value</td>
+  </tr>
+  <tr>
+    <td>Name</td>
+    <td>Value</td>
+    <td>Value</td>
   </tr>
   <tr style="padding: 20px;">
-    <td> </td>
-    <td> </td>
-    <td> </td>
-  </tr>
-  <tr style="padding: 20px;">
-    <td> </td>
-    <td> </td>
-    <td> </td>
-  </tr>
-  <tr style="padding: 20px;">
-    <td> </td>
-    <td> </td>
-    <td> </td>
+    <td>Name</td>
+    <td>Value</td>
+    <td>Value</td>
   </tr>
 </table>
    <button class="btn btn-primary" onclick="newRow()">Add Row</button>
