--- a/beta/index.html
+++ b/beta/index.html
@@ -219,7 +219,7 @@ function alertAds() {
     <td>Value</td>
     <td>Value</td>
   </tr>
-</table>
+</table><br>
    <button class="btn btn-primary" onclick="newRow()">Add Row</button>
    <button class="btn btn-primary" onclick="newColumn()">Add Column</button>
 </div>
