--- a/beta/index.html
+++ b/beta/index.html
@@ -198,7 +198,7 @@ function alertAds() {
         border-collapse: collapse;
      }
    </style>
-<table style="width: 100%;" contenteditable="true" id="tisheets-table">
+<table style="width: 100%; outline: none;" contenteditable="true" id="tisheets-table">
   <tr>
     <th>Name</th>
     <th>Name</th> 
