--- a/beta/index.html
+++ b/beta/index.html
@@ -199,7 +199,7 @@ function alertAds() {
      }
    </style>
 <table style="width: 100%; outline: none;" contenteditable="true" id="tisheets-table">
-  <tr>
+  <tr id="tisheets-cell0">
     <th>Name</th>
     <th>Name</th> 
     <th>Name</th>
@@ -209,12 +209,12 @@ function alertAds() {
     <td>Value</td>
     <td>Value</td>
   </tr>
-  <tr>
+  <tr id="tisheets-cell1">
     <td>Name</td>
     <td>Value</td>
     <td>Value</td>
   </tr>
-  <tr style="padding: 20px;">
+  <tr id="tisheets-cell2">
     <td>Name</td>
     <td>Value</td>
     <td>Value</td>
