--- a/beta/index.html
+++ b/beta/index.html
@@ -126,6 +126,7 @@ function alertAds() {
   <p id="ticontacts-error" style="color: red;"></p>
   
   <button class="btn btn-primary" onclick="addContact()">Add Contact</button>
+  </div>
   
    <div id="HCB_comment_box" style="display: none;">Connecting to <b>TiContacts</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
