--- a/beta/index.html
+++ b/beta/index.html
@@ -31,6 +31,7 @@
                 <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
                 <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
                 <li class="dropdown-header">TiWork</li>
+                  <li><a href="?app=5">TiContacts <span class="glyphicon glyphicon-book"></span></a></li>
                      <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-floppy-disk"></span></a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="?app=8">New App <span class="glyphicon glyphicon-plus"></span></a></li>
