--- a/beta/index.html
+++ b/beta/index.html
@@ -31,7 +31,7 @@
                 <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
                 <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
                 <li class="dropdown-header">TiWork</li>
-                  <li><a href="?app=5">TiContacts <span class="glyphicon glyphicon-book"></span></a></li>
+                 <!--<li><a href="?app=5">TiContacts <span class="glyphicon glyphicon-book"></span></a></li>-->
                      <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-floppy-disk"></span></a></li>
                 <li role="separator" class="divider"></li>
                 <li><a href="?app=8">New App <span class="glyphicon glyphicon-plus"></span></a></li>
@@ -115,7 +115,7 @@ function alertAds() {
   aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:0%;">
   </div>
 </div>
-  <div id="ticontacts-contacts">
+ <!-- <div id="ticontacts-contacts">
     You have no contacts.
   </div><br>
     <button class="btn btn-primary" onclick="resetContacts()">Reset Contacts</button><br><br>
@@ -127,7 +127,7 @@ function alertAds() {
   <p id="ticontacts-error" style="color: red;"></p>
   
   <button class="btn btn-primary" onclick="addContact()">Add Contact</button>
-  </div>
+  </div>-->
   
    <div id="HCB_comment_box" style="display: none;">Connecting to <b>TiContacts</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
