--- a/beta/index.html
+++ b/beta/index.html
@@ -220,7 +220,7 @@ function alertAds() {
   </tr>
 </table><br>
    <button class="btn btn-primary" onclick="newRow()">Add Row</button>
-   <button class="btn btn-primary" onclick="newColumn()">Add Column</button>
+  <!-- <button class="btn btn-primary" onclick="newColumn()">Add Column</button>-->
 </div>
   <div id="HCB_comment_box" style="display: none;">Connecting to <b>Tiles</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
