--- a/beta/index.html
+++ b/beta/index.html
@@ -228,6 +228,7 @@ function alertAds() {
 </div>
 </div>
 <h5 style="display: none;" id="view"></h5><br>
+<p style="display: none;" id="hasTiPlus">false</p>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
     <script src="jscolor.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
