--- a/beta/index.html
+++ b/beta/index.html
@@ -108,14 +108,14 @@ function alertAds() {
     <input id="chat" class="form-control" style="display: none;"><br>
     <button id="joinChatBtn" onclick="joinChat()" class="btn btn-primary" style="display: none;">Create/Join Chat</button>
  
-<div style="display: none;" id="ticontacts">
+<!--<div style="display: none;" id="ticontacts">
     <h3>TiContacts</h3><br>
  <div id="progress-parent" class="progress" style="display:none;">
   <div id="progress-bar" class="progress-bar active" role="progressbar"
   aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:0%;">
   </div>
 </div>
- <!-- <div id="ticontacts-contacts">
+ <div id="ticontacts-contacts">
     You have no contacts.
   </div><br>
     <button class="btn btn-primary" onclick="resetContacts()">Reset Contacts</button><br><br>
@@ -127,12 +127,11 @@ function alertAds() {
   <p id="ticontacts-error" style="color: red;"></p>
   
   <button class="btn btn-primary" onclick="addContact()">Add Contact</button>
-  </div>-->
+  </div>
   
    <div id="HCB_comment_box" style="display: none;">Connecting to <b>TiContacts</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
- <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506539939724");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
-</div>
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506539939724");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ <!--</script></div>-->
   <div style="display: none;" id="newapp">
     <h3>New App</h3><br>
   <input id="newapp-name" class="form-control" placeholder="App Name"><br>
