--- a/beta/index.html
+++ b/beta/index.html
@@ -181,8 +181,7 @@ function alertAds() {
               </ul>
             </li>
       </ul>
-      <button onclick="save()" class="btn btn-primary">Save your changes</button><br>
-       Reset All Tiles<br>
+      <button onclick="save()" class="btn btn-primary">Save Your Changes</button><br>
        <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br><br>
         <div id="tiles-tiles">
        You have no Tiles.
@@ -219,6 +218,7 @@ function alertAds() {
   </tr>
 </table><br>
    <button class="btn btn-primary" onclick="newRow()">Add Row</button>
+   <button class="btn btn-primary" onclick="saveSheet()">Save</button>
   <!-- <button class="btn btn-primary" onclick="newColumn()">Add Column</button>-->
 </div>
   <div id="HCB_comment_box" style="display: none;">Connecting to <b>Tiles</b> database.</div>
