--- a/beta/index.html
+++ b/beta/index.html
@@ -181,8 +181,8 @@ function alertAds() {
               </ul>
             </li>
       </ul>
-      <button onclick="save()" class="btn btn-primary">Save Your Changes</button><br>
-       <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br><br>
+      <button onclick="save()" class="btn btn-primary">Save Your Changes</button>
+      <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br><br>
         <div id="tiles-tiles">
        You have no Tiles.
        </div>
