--- a/beta/index.html
+++ b/beta/index.html
@@ -218,7 +218,8 @@ function alertAds() {
   </tr>
 </table><br>
    <button class="btn btn-primary" onclick="newRow()">Add Row</button>
-   <button class="btn btn-primary" onclick="saveSheet()">Save</button>
+   <button class="btn btn-primary" id="tisheets-save" onclick="saveSheet()">Save</button>
+   <button class="btn btn-primary" id="tisheets-edit" onclick="editSheet()">Edit</button>
   <!-- <button class="btn btn-primary" onclick="newColumn()">Add Column</button>-->
 </div>
   <div id="HCB_comment_box" style="display: none;">Connecting to <b>Tiles</b> database.</div>
