--- a/beta/index.html
+++ b/beta/index.html
@@ -217,7 +217,7 @@ function alertAds() {
     <td>Value</td>
   </tr>
 </table><br>
-   <button class="btn btn-primary" onclick="newRow()">Add Row</button>
+   <button class="btn btn-primary" id="tisheets-add-row" onclick="newRow()">Add Row</button>
    <button class="btn btn-primary" id="tisheets-save" onclick="saveSheet()">Save</button>
    <button class="btn btn-primary" id="tisheets-edit" onclick="editSheet()">Edit</button>
   <!-- <button class="btn btn-primary" onclick="newColumn()">Add Column</button>-->
