--- a/beta/index.html
+++ b/beta/index.html
@@ -219,7 +219,7 @@ function alertAds() {
 </table><br>
    <button class="btn btn-primary" id="tisheets-add-row" onclick="newRow()">Add Row</button>
    <button class="btn btn-primary" id="tisheets-save" onclick="saveSheet()">Save</button>
-   <button class="btn btn-primary" id="tisheets-edit" onclick="editSheet()">Edit</button>
+   <button class="btn btn-primary" id="tisheets-edit" onclick="editSheet()" style="display: none;">Edit</button>
   <!-- <button class="btn btn-primary" onclick="newColumn()">Add Column</button>-->
 </div>
   <div id="HCB_comment_box" style="display: none;">Connecting to <b>Tiles</b> database.</div>
