--- a/tiri/index.html
+++ b/tiri/index.html
@@ -25,7 +25,7 @@
           <ul class="nav navbar-nav">
             
             <li class="dropdown">
-              <a data-toggle="dropdown" href="#">Apps<span class="caret"></span></a>
+              <a data-toggle="dropdown" href="#">Tiri<span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a></li>
                 <li><a href="?app=2">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
