--- a/tiri/index.html
+++ b/tiri/index.html
@@ -39,14 +39,24 @@
       </div>
     </nav>
 
-<div class="container">
-  <center>
-    <div id="tiri">
-      <p id="question"><i>Say "Hey Tiri" and ask a question...</i></p>
-    </div>
-    <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/2313-200.png">
-  </center>
-</div>
+  <div class="container">
+      <div id="tiri">
+       <center>
+        <p id="question"><i>Say "Hey Tiri" and ask a question...</i></p>
+        <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/2313-200.png">
+       </center>
+      </div>
+      
+      <div id="settings">
+        <h3>Settings</h3>
+        <button onclick="adjustVoice();" class="btn btn-primary">Adjust Voice</button>
+      </div>
+      
+      <div id="adjust-voice">
+        <h3>Say "Hey Tiri" 5 times.</h3>
+      </div>
+  </div>
+    <script src="tiri.js">
     <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
