--- a/tiri/index.html
+++ b/tiri/index.html
@@ -47,12 +47,12 @@
        </center>
       </div>
       
-      <div id="settings">
+      <div id="settings" style="display: none;">
         <h3>Settings</h3>
         <button onclick="adjustVoice();" class="btn btn-primary">Adjust Voice</button>
       </div>
       
-      <div id="adjust-voice">
+      <div id="adjust-voice" style="display: none;">
         <h3>Say "Hey Tiri" 5 times.</h3>
       </div>
   </div>
