--- a/tiri/index.html
+++ b/tiri/index.html
@@ -42,7 +42,7 @@
       <div id="tiri">
        <center>
         <p id="question"><i>Say "Hey Tiri" and ask a question...</i></p>
-        <img src="https://d30y9cdsu7xlg0.cloudfront.net/png/2313-200.png">
+        <img src="microphone.png">
        </center>
       </div>
       
