--- a/tiri/index.html
+++ b/tiri/index.html
@@ -52,7 +52,7 @@
       </div>
       
       <div id="adjust-voice" style="display: none;">
-        <h3>Say "Hey Tiri" 5 times.</h3>
+        <h3>Say "Hey Tiri".</h3>
       </div>
   </div>
     <script src="tiri.js">
