--- a/index.html
+++ b/index.html
@@ -1,1 +1,251 @@
-<meta http-equiv="refresh" content="0; url=beta/" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://bootswatch.com/paper/bootstrap.min.css" crossorigin="anonymous">
+    <title>Home - TiMedia</title>
+  </head>
+  <body id="body">
+    <nav class="navbar navbar-inverse" id="navbar">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+
+            <li class="dropdown">
+              <a data-toggle="dropdown" href="#">Apps<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a></li>
+                <li><a href="?app=1">Points <span class="glyphicon glyphicon-usd"></span></a></li>
+                <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
+                <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
+                <li class="dropdown-header">TiWork</li>
+                 <!--<li><a href="?app=5">TiContacts <span class="glyphicon glyphicon-book"></span></a></li>-->
+                     <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-floppy-disk"></span></a></li>
+                <li role="separator" class="divider"></li>
+                <li><a href="?app=8">New App <span class="glyphicon glyphicon-plus"></span></a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul id="login" class="nav navbar-nav navbar-right">
+            <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+            <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          </ul>
+          <center>
+           <a class="navbar-brand" href="index.html">TiMedia <b>2</b></a>
+          </center>
+          <ul id="logout" class="nav navbar-nav navbar-right" style="display: none;">
+            <li><a href="logout.html"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+<div class="container">
+<div id="home">
+  <script>
+    function changeName() {
+      document.getElementById('hcb_form_name').value = localStorage.name;
+      document.getElementById('hcb_form_name').disabled = true;
+   }
+
+ Element.prototype.remove = function() {
+    this.parentElement.removeChild(this);
+}
+NodeList.prototype.remove = HTMLCollection.prototype.remove = function() {
+    for(var i = this.length - 1; i >= 0; i--) {
+        if(this[i] && this[i].parentElement) {
+            this[i].parentElement.removeChild(this[i]);
+        }
+    }
+}
+setInterval(changeName, 50)
+  </script>
+  <center>
+   <div id="HCB_comment_box">Loading comments...</div>
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506458898957");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+</div>
+  </center>
+ <div style="display: none;" id="points">
+    <h3>Points</h3><br>
+    <div id="ti-bank-msg" class="jumbotron">
+      <h1>Introducing TiBank</h1>
+      <p>TiBank is the most secure way to store and spend your TiPoints.</p>
+      <button onclick="dismissTiBank()" class="btn btn-primary">Dismiss</button>
+</div>
+
+<h1 id="points-balance">0 TiPoints</h1>
+Final Balance<br><br>
+   <a href="http://microify.com/1zrV"><button onclick="alertAds()"class="btn btn-primary">Watch Ads to Earn TiPoints</button></a><br>
+<script>
+function alertAds() {
+  alert("We are not responsible for any damage to your device. Some ads may link to viruses.\n\nIf it says that you have an outdated browser or that YOUR DOWNLOAD IS READY, DO NOT CLICK IT!\n\nIn the top right corner there will be a countdown. When it's over there will be a yellow Skip Ad button. Click it to recieve your TiPoints.")
+}
+   </script>
+
+ <div id="HCB_comment_box" style="display: none;">Connecting to <b>Points</b> database.</div>
+ <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506539939724");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+</div>
+
+<div style="display: none;" id="messages">
+    <h3>TiChat</h3><br>
+  Chat Password<br>
+
+</div>
+
+    <input id="chat" class="form-control" style="display: none;"><br>
+    <button id="joinChatBtn" onclick="joinChat()" class="btn btn-primary" style="display: none;">Create/Join Chat</button>
+
+<!--<div style="display: none;" id="ticontacts">
+    <h3>TiContacts</h3><br>
+ <div id="progress-parent" class="progress" style="display:none;">
+  <div id="progress-bar" class="progress-bar active" role="progressbar"
+  aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:0%;">
+  </div>
+</div>
+ <div id="ticontacts-contacts">
+    You have no contacts.
+  </div><br>
+    <button class="btn btn-primary" onclick="resetContacts()">Reset Contacts</button><br><br>
+  <h3>Add Contact</h3>
+  <input id="ticontacts-user" class="form-control" placeholder="Username"><br>
+
+  <textarea id="ticontacts-info" class="form-control" placeholder="Info"></textarea>
+
+  <p id="ticontacts-error" style="color: red;"></p>
+
+  <button class="btn btn-primary" onclick="addContact()">Add Contact</button>
+  </div>
+
+   <div id="HCB_comment_box" style="display: none;">Connecting to <b>TiContacts</b> database.</div>
+ <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506539939724");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*--><!--</script></div>-->
+  <div style="display: none;" id="newapp">
+    <h3>New App</h3><br>
+  <input id="newapp-name" class="form-control" placeholder="App Name"><br>
+
+  <input id="newapp-icon" onkeyup="updateIcon()" class="form-control" placeholder="App Icon (GlyphIcon)"><p id="newapp-preview">Preview: </p><br>
+
+  <textarea id="newapp-source" class="form-control" placeholder="App Source (HTML)"></textarea><br>
+
+  <button class="btn btn-primary" onclick="submitApp()">Create App</button>
+</div>
+
+ <div style="display: none;" id="tidocs">
+    <h3>TiDocs</h3><br>
+
+    <div id="create">
+      <h5 style="outline: none;" id="content" contenteditable="true"></h5><br>
+
+      <button onclick="saveDoc()" class="btn btn-primary">Save</button>
+  </div>
+<h5 style="display: none;" id="view"></h5><br>
+<button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
+</div>
+
+     <div id="settings" style="display: none;">
+       <h3>Settings</h3><br>
+       Background Image<br>
+      <input class="form-control" type="text" id="backgroundImg"><br>
+
+       Bar Color<br>
+      <input style="width: 5%;" id="barColor" class="jscolor form-control" value="2296f3"><br>
+      <button onclick="updateSettings()" class="btn btn-success">Save</button>
+  </div>
+
+    <div id="tiles" style="display: none;">
+       <h3>Tiles</h3><br>
+       File name<br>
+      <input class="form-control" type="text" id="TiFilesSearch"><br><button onclick="searchFiles()" class="btn btn-primary">Search</button>
+      <ul class="btn btn-primary" style="list-style: none;">
+        <li class="dropdown">
+              <a data-toggle="dropdown" href="#" style="color:white">Add a Tile <span class="caret"></span></a>
+              <ul class="dropdown-menu" style="list-style: none;">
+                <li><a href="index.html?app=3">New TiDoc <span class="glyphicon glyphicon-pencil"></span></a></li>
+                <li><a href="index.html?app=4">New TiSheet <span class="glyphicon glyphicon-th-list"></span></a></li>
+                <li><a onclick="addFile()">Save TiDoc/TiSheet <span class="glyphicon glyphicon-floppy-saved"></span></a></li>
+                <li><a onclick="redirect()">Last Opened Document <span class="glyphicon glyphicon-folder-open"></span></a></li>
+                <li><a onclick="addFile()">New Bookmark <span class="glyphicon glyphicon-bookmark"></span></a></li>
+              </ul>
+            </li>
+      </ul>
+      <button onclick="save()" class="btn btn-primary">Save Your Changes</button>
+      <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br><br>
+        <div id="tiles-tiles">
+       You have no Tiles.
+       </div>
+  </div>
+ <div id="tisheets" style="display: none;">
+  <h3>TiSheets</h3>
+   <style>
+     table, th, td {
+        border: 1px solid gray;
+        border-collapse: collapse;
+     }
+   </style>
+<table style="width: 100%; outline: none;" contenteditable="true" id="tisheets-table">
+  <tr id="tisheets-cell0">
+    <th>Name</th>
+    <th>Name</th>
+    <th>Name</th>
+  </tr>
+  <tr>
+    <td>Name</td>
+    <td>Value</td>
+    <td>Value</td>
+  </tr>
+  <tr id="tisheets-cell1">
+    <td>Name</td>
+    <td>Value</td>
+    <td>Value</td>
+  </tr>
+  <tr id="tisheets-cell2">
+    <td>Name</td>
+    <td>Value</td>
+    <td>Value</td>
+  </tr>
+</table><br>
+   <button class="btn btn-primary" id="tisheets-add-row" onclick="newRow()">Add Row</button>
+   <button class="btn btn-primary" id="tisheets-save" onclick="saveSheet()">Save</button>
+   <button class="btn btn-primary" id="tisheets-edit" onclick="editSheet()" style="display: none;">Edit</button>
+  <!-- <button class="btn btn-primary" onclick="newColumn()">Add Column</button>-->
+</div>
+  <div id="HCB_comment_box" style="display: none;">Connecting to <b>Tiles</b> database.</div>
+ <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
+ <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506539939724");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+</div>
+</div>
+<h5 style="display: none;" id="view"></h5><br>
+<p style="display: none;" id="hasTiPlus">false</p>
+<button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
+    <script src="jscolor.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="home.js"></script>
+    <script src="main.js"></script>
+    <script src="docs.js"></script>
+    <script src="sheets.js"></script>
+    <script src="points.js"></script>
+    <script src="db.js"></script>
+    <script src="messages.js"></script>
+    <script src="new.js"></script>
+    <script src="contacts.js"></script>
+    <script src="settings.js"></script>
+    <script src="tiles.js"></script>
+    </div>
+  </body>
+</html>
