--- a/reward.html
+++ b/reward.html
@@ -10,6 +10,6 @@
 var points = localStorage.points;
 var points = Number(points) + 10;
 localStorage.points = points;
-window.location.href = "https://proudloyaltier.github.io/timedia/beta/index.html?app=1";
+window.location.href = "https://proudloyaltier.github.io/timedia/beta/";
 </script>
 </html>
