--- a/beta/index.html
+++ b/beta/index.html
@@ -29,6 +29,7 @@
                 <li><a href="index.html">Home <span class="glyphicon glyphicon-home"></span></a></li>
                 <li><a href="?app=1">Points <span class="glyphicon glyphicon-usd"></span></a></li>
                 <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
+                <li><a href="/tiri">Tiri <span class="glyphicon glyphicon-equalizer"></span></a></li>
                 <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
                 <li class="dropdown-header">TiWork</li>
                  <!--<li><a href="?app=5">TiContacts <span class="glyphicon glyphicon-book"></span></a></li>-->
