--- a/tiri/index.html
+++ b/tiri/index.html
@@ -41,7 +41,7 @@
   <div class="container">
       <div id="tiri">
        <center>
-        <p id="question"><i>Say "Hey Tiri" and ask a question...</i></p>
+        <p id="question"><i>Say a command, like "Open Docs".</i></p>
         <img src="microphone.png">
        </center>
       </div>
