--- a/tiri/index.html
+++ b/tiri/index.html
@@ -41,18 +41,10 @@
   <div class="container">
       <div id="tiri">
        <center>
-        <p id="question"><i>Say a command, like "Open Docs".</i></p>
-        <img src="microphone.png">
+        <p><i>Say a command, like "Open Docs", "Open Sheets", or "Open Tiles".</i></p>
+        <img src="microphone.png"><br>
+        <a href="/timedia"><button class="btn btn-primary">Back to Home</button></a>
        </center>
-      </div>
-      
-      <div id="settings" style="display: none;">
-        <h3>Settings</h3>
-        <button onclick="adjustVoice();" class="btn btn-primary">Adjust Voice</button>
-      </div>
-      
-      <div id="adjust-voice" style="display: none;">
-        <h3>Say "Hey Tiri".</h3>
       </div>
   </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
