--- a/tiri/index.html
+++ b/tiri/index.html
@@ -32,7 +32,7 @@
       <div id="tiri">
        <center>
         <p><i>Say a command, like "Open Docs", "Open Sheets", or "Open Tiles".</i></p>
-        <img src="microphone.png"><br>
+        <img src="microphone.png"><br><br>
         <a href="/timedia"><button class="btn btn-primary">Back to Home</button></a>
        </center>
       </div>
