--- a/beta/index.html
+++ b/beta/index.html
@@ -229,8 +229,9 @@ function alertAds() {
 </div>
 </div>
 <h5 style="display: none;" id="view"></h5><br>
-<p style="display: none;" id="hasTiPlus">false</p>
 <button id="tidocs-edit" style="display: none;" onclick="editDoc()" class="btn btn-primary">Edit</button>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
+    <script src="tiri.js"></script>
     <script src="jscolor.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
