--- a/beta/signup.html
+++ b/beta/signup.html
@@ -1,6 +1,4 @@
-<form method="POST" action="http://formspree.io/timediamail@gmail.com">
-  <input type="username" name="username" placeholder="Your username">
-   <input type="password" name="password" placeholder="Your password">
-   <input type="email" name="email" placeholder="Your email">
-  <button type="submit">Submit</button>
-</form>
+<meta http-equiv="refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform" />
+<script>
+window.location.href = "https://docs.google.com/forms/d/e/1FAIpQLScCiyFtn6ODD7rIsL6HBJXHttwk89F8dirYY4vvw8q3DpA9HA/viewform";
+</script>
