--- a/beta/index.html
+++ b/beta/index.html
@@ -143,6 +143,12 @@ function alertAds() {
   <button class="btn btn-primary" onclick="submitApp()">Create App</button>
 </div>
   
+  <div id="timessage" style="display: none;">
+       <h3>TiMessage</h3><br>
+<div id="messages">No messages!</div><br>
+	<button onclick="sendMessage(prompt('User:'), prompt('Message:'))" class=“btn btn-primary“>Send Message</button>
+ </div>
+  
  <div style="display: none;" id="tidocs">
     <h3>TiDocs</h3><br>
 
