--- a/beta/index.html
+++ b/beta/index.html
@@ -253,6 +253,7 @@ function alertAds() {
     <script src="contacts.js"></script>
     <script src="settings.js"></script>
     <script src="tiles.js"></script>
+    <script src="timessage.js"></script>
     </div>
   </body>
 </html>
