--- a/beta/index.html
+++ b/beta/index.html
@@ -250,6 +250,7 @@ function alertAds() {
     <script src="contacts.js"></script>
     <script src="settings.js"></script>
     <script src="tiles.js"></script>
+    <script src="slides.js"></script>
     </div>
   </body>
 </html>
