--- a/beta/index.html
+++ b/beta/index.html
@@ -225,7 +225,7 @@ function alertAds() {
    <button class="btn btn-primary" id="tisheets-edit" onclick="editSheet()" style="display: none;">Edit</button>
   <!-- <button class="btn btn-primary" onclick="newColumn()">Add Column</button>-->
 </div>
-<div id="tislides">
+<div id="tislides" style="display: none;">
   <h3>TiSlides</h3>
 </div>
   <div id="HCB_comment_box" style="display: none;">Connecting to <b>Tiles</b> database.</div>
