--- a/beta/index.html
+++ b/beta/index.html
@@ -226,7 +226,8 @@ function alertAds() {
 </div>
 <div id="tislides" style="display: none;">
   <h3>TiSlides</h3>
-  <canvas id="myCanvas" width="1000" height="600" style="border:1px solid #d3d3d3;">
+  <canvas id="myCanvas" width="1000" height="600" style="border:1px solid #d3d3d3;"><br>
+  <button class="btn btn-primary" onclick="addText()">Add Text</button>
 </div>
   <div id="HCB_comment_box" style="display: none;">Connecting to <b>Tiles</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
