--- a/beta/index.html
+++ b/beta/index.html
@@ -222,7 +222,7 @@ function alertAds() {
    <button class="btn btn-primary" id="tisheets-add-row" onclick="newRow()">Add Row</button>
    <button class="btn btn-primary" id="tisheets-save" onclick="saveSheet()">Save</button>
    <button class="btn btn-primary" id="tisheets-edit" onclick="editSheet()" style="display: none;">Edit</button>
-  <!-- <button class="btn btn-primary" onclick="newColumn()">Add Column</button>-->
+  <button class="btn btn-primary" onclick="newColumn()">Add Column</button>
 </div>
 <div id="tislides" style="display: none;">
   <h3>TiSlides</h3>
