--- a/beta/signup.html
+++ b/beta/signup.html
@@ -1,1 +1,1 @@
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVpLfZV5nGrtlHwFBRyJ14vfPakwSMhxEG_AxYuMbA4FTCBA/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVpLfZV5nGrtlHwFBRyJ14vfPakwSMhxEG_AxYuMbA4FTCBA/viewform?embedded=true" width="90%" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
