--- a/beta/index.html
+++ b/beta/index.html
@@ -166,14 +166,14 @@ function alertAds() {
          
          Bar Color<br>
         <input style="width: 5%;" id="barColor" class="jscolor form-control" value="2296f3"><br>
+        <button onclick="updateSettings()" class="btn btn-success">Save</button>
        </div>
        <br><br><br>
        <h4> Tiles </h4>
        <div id="tileSettings">
-        <button onclick="backupTiles('TilesBackup.txt', localStorage.files)" class="btn btn-success">Backup Tiles</button>
-        <button onclick="restoreTiles()" class="btn btn-success">Restore Tiles</button>
+        <button onclick="backupTiles('TilesBackup.txt', localStorage.files)" class="btn btn-primary">Backup Tiles</button>
+        <button onclick="restoreTiles()" class="btn btn-primary">Restore Tiles</button><br>
         <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br><br>
-        <button onclick="updateSettings()" class="btn btn-success">Save</button>
        </div>
   </div>
   
