--- a/beta/index.html
+++ b/beta/index.html
@@ -172,8 +172,8 @@ function alertAds() {
        <h4> Tiles </h4>
        <div id="tileSettings">
         <button onclick="backupTiles('TilesBackup.txt', localStorage.files)" class="btn btn-primary">Backup Tiles</button>
-        <button onclick="restoreTiles()" class="btn btn-primary">Restore Tiles</button><br>
-        <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br><br>
+        <button onclick="restoreTiles()" class="btn btn-primary">Restore Tiles</button><br><br>
+        <button onclick="resetTiles()" class="btn btn-danger">Reset Tiles</button><br>
        </div>
   </div>
   
