--- a/beta/index.html
+++ b/beta/index.html
@@ -190,7 +190,7 @@ function alertAds() {
                 <!-- <li><a href="index.html?app=9">New TiSlide <span class="glyphicon glyphicon-blackboard"></span></a></li> -->
                 <li><a onclick="redirect()">Last Opened Document <span class="glyphicon glyphicon-folder-open"></span></a></li>
                 <li><a onclick="addFile()">New Bookmark <span class="glyphicon glyphicon-bookmark"></span></a></li>
-                <li><a onclick="saveChat()">Save A Chat <span class="glyphicon glyphicon-comments"></span></a></li>
+                <li><a onclick="saveChat()">Save A Chat <span class="glyphicon glyphicon-send"></span></a></li>
               </ul>
             </li>
       </ul>
