--- a/beta/index.html
+++ b/beta/index.html
@@ -202,6 +202,11 @@ function alertAds() {
  <div id="tisheets" style="display: none;">
   <h3>TiSheets</h3>
    <style>
+     a {
+       color: Black;
+       text-decoration: none;
+     }
+     
      table, th, td {
         border: 1px solid gray;
         border-collapse: collapse;
