--- a/beta/index.html
+++ b/beta/index.html
@@ -32,7 +32,6 @@
                 <li><a href="?app=1">Points <span class="glyphicon glyphicon-usd"></span></a></li>
                 <li><a href="?app=2">TiChat <span class="glyphicon glyphicon-send"></span></a></li>
                 <li><a href="?app=6">Settings <span class="glyphicon glyphicon-cog"></span></a></li>
-                <li class="dropdown-header">TiWork</li>
                  <!--<li><a href="?app=5">TiContacts <span class="glyphicon glyphicon-book"></span></a></li>-->
                      <li><a href="?app=7">Tiles <span class="glyphicon glyphicon-cloud"></span></a></li>
                 <li role="separator" class="divider"></li>
@@ -239,6 +238,14 @@ function alertAds() {
   <h3>TiSlides</h3>
   <canvas id="myCanvas" width="1000" height="600" style="border:1px solid #d3d3d3;"></canvas><br>
   <button class="btn btn-primary" onclick="addText()">Add Text</button>
+</div>
+<div id="tisupport" style="display: none;">
+  <h3>TiMedia Support</h3>
+  <p>Help Forum</p>
+  <a href=""></a>
+  <div id="HCB_comment_box">Loading comments...</div>
+    <script type="text/javascript" id="hcb"> /*<!--*/ if(!window.hcb_user){hcb_user={};} (function(){var s=document.createElement("script"), l=hcb_user.PAGE || (""+window.location).replace(/'/g,"%27"), h="//www.htmlcommentbox.com";s.setAttribute("type","text/javascript");s.setAttribute("src", h+"/jread?page="+encodeURIComponent(l).replace("+","%2B")+"&opts=16862&num=10&ts=1506458898957");if (typeof s!="undefined") document.getElementsByTagName("head")[0].appendChild(s);})(); /*-->*/ </script>
+  </div>
 </div>
   <div id="HCB_comment_box" style="display: none;">Connecting to <b>Tiles</b> database.</div>
  <link rel="stylesheet" type="text/css" href="//www.htmlcommentbox.com/static/skins/bootstrap/twitter-bootstrap.css?v=0" />
