--- a/beta/index.html
+++ b/beta/index.html
@@ -274,6 +274,7 @@ function alertAds() {
     <script src="tiles.js"></script>
     <script src="slides.js"></script>
     <script src="speech.js"></script>
+    <script src="support.js"></script>
     </div>
   </body>
 </html>
