--- a/beta/tiri.html
+++ b/beta/tiri.html
@@ -10,8 +10,10 @@
     <title>Tiri</title>
   </head>
   <body id="body">
-    <h3 id="user"></h2>
-    <h1 id="tiri"></h1>
+    <center>
+      <h3 id="user"></h2>
+      <h1 id="tiri"></h1>
+    </center>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
     <script src="tiri.js"></script>
     <script src="jscolor.js"></script>
