--- a/beta/tiri.html
+++ b/beta/tiri.html
@@ -26,12 +26,14 @@
   <style>
     #user {
       color: gray;
-      font-family: 'Poppins';
-    };
+    }
     
     #tiri {
       color: black;
+    }
+    
+    body {
       font-family: 'Poppins';
-    };
+    }
   </style>
 </html>
